addition of responsiveness to the entire page and fixing CSS of Hero Section

--- a/src/css/homePage.css
+++ b/src/css/homePage.css
@@ -13,12 +13,7 @@ body, html {
 
 .background {
 
-    background-image: url("../images/hero-ipad-background.png");
-    background-repeat: no-repeat;
-    height: 200vh;
-    /* position: relative; */
-    /* background-size: contain; */
-    overflow: visible; 
+    position: relative;
 }
 
 .overlapping-imgs{
