--- a/src/components/homepage/homePage.css
+++ b/src/components/homepage/homePage.css
@@ -13,7 +13,7 @@ body, html {
 
 .background {
 
-    background-image: url("../images/background.png");
+    background-image: url("../../images/background.png");
     background-repeat: no-repeat;
     background-size: contain;
     position: relative;
