adjusted footer CSS and headings.

--- a/src/css/parentClass.css
+++ b/src/css/parentClass.css
@@ -1,9 +1,8 @@
-
-/* .header {
+.header {
     display: flex;
     flex-direction: column;
     padding-top: 10%;
     text-align: center;
     margin: 0 auto;
     max-width: fit-content;
-} */
+}
