--- a/src/css/parentClass.css
+++ b/src/css/parentClass.css
@@ -1,8 +1,28 @@
 .header {
     display: flex;
     flex-direction: column;
-    padding-top: 10%;
     text-align: center;
     margin: 0 auto;
     max-width: fit-content;
+    max-height: min-content;
+}
+
+.divider {
+
+    border-color: rgba(255, 171, 36, 1);
+    border-width: 1px;
+    width: 100%;
+    margin-bottom: 2%;
+    opacity: 0.9;
+}
+
+
+.background-wrapper {
+    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(255, 171, 36, 0.13) 47.5%, rgba(0, 0, 0, 0) 100%);
+    padding-top: 0.5rem; /* Space between the divider and text */
+    padding-bottom: 0.5rem;
+}
+
+.bottom-margin-of-body {
+    margin-bottom: 10%;
 }
