created login and sign up pages

--- a/src/components/homepage/sectionOne/sectionOne.css
+++ b/src/components/homepage/sectionOne/sectionOne.css
@@ -1,6 +1,6 @@
 .background {
 
-    background-image: url("../../images/background.png");
+    background-image: url("../../../images/background.png");
     background-repeat: no-repeat;
     background-size: contain;
     position: relative;
