--- a/src/components/login/logIn.css
+++ b/src/components/login/logIn.css
@@ -45,11 +45,7 @@ body{
    
 }
 
-/* .redirect-login{
-    display: flex;
-    flex-direction: 'row';
-    gap: 50% !important;
-} */
+
 
 .redirect-login-question{
     color: white;
@@ -58,7 +54,10 @@ body{
 .login-button{
     background: white !important;
     border-radius: 10px;
-    color: black !important;
     padding: 2%;
-    /* margin-right: 60%; */
+}
+
+.link-decor{
+    text-decoration: none;
+    color: black
 }
